<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="night_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="terms_of_use">Пользовательское соглашение</string>
    <string name="app_link">https://practicum.yandex.ru/android-developer/</string>
    <string name="terms_of_use_link">https://yandex.ru/legal/practicum_offer/</string>
    <string name="default_email">y@basalygina.ru</string>
    <string name="email_default_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="email_default_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="track_title">Название</string>
    <string name="artist">Исполнитель</string>
    <string name="separator_artist_duration">•</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="error_connection">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh">Обновить</string>
    <string name="search_history">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="view_track_message">Просмотр трека &quot;%1$s&quot; из истории</string>
    <string name="track_time_label">Длительность</string>
    <string name="album_label">Альбом</string>
    <string name="year_label">Год</string>
    <string name="genre_label">Жанр</string>
    <string name="country_label">Страна</string>
    <string name="timer_start_time">00:00</string>
    <string name="mediateka_is_empty">Ваша медиатека пуста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="playlists_is_empty">Вы не создали \nни одного плейлиста</string>
    <string name="tab_favorite">Избранные треки</string>
    <string name="tab_playlists">Плейлисты</string>
    <string name="playlist_name">Название*</string>
    <string name="playlist_name_def">Название плейлиста</string>
    <string name="playlist_tracks_count_def">Количество треков</string>
    <string name="playlist_description">Описание</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="create">Создать</string>
    <string name="finish_creating_playlist_title">Завершить создание плейлиста?</string>
    <string name="finish_creating_playlist_message">Все несохраненные данные будут потеряны.</string>
    <string name="cancel">Отмена</string>
    <string name="finish">Завершить</string>
    <string name="playlist_created_message">Плейлист %s создан</string>
    <string name="playlist_name_is_taken">Плейлист %s уже существует</string>
    <string name="added_to_playlist">Добавлено в плейлист %s</string>
    <string name="already_added_to_playlist">Трек уже добавлен в плейлист %s</string>
    <string name="playlist_duration">0 минут</string>
    <string name="playlist_tracks_count">0 треков</string>
    <string name="delete_track_dialog_title">Удалить трек</string>
    <string name="delete_track_dialog_message">Хотите удалить трек?</string>
    <string name="delete">Удалить</string>
    <string name="yes">ДА</string>
    <string name="no">НЕТ</string>
    <string name="share">Поделиться</string>
    <string name="edit_info">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="delete_playlist_dialog_message">Хотите удалить плейлист \"%s\"?</string>
    <string name="edit">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="nothing_to_share">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="error_loading_playlist">Ошибка загрузки плейлиста</string>
    <string name="something_went_wrong">Что-то пошло не так</string>
    <string name="playlist_is_empty">В плейлисте нет треков</string>
</resources>