<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/header_text_size" />

    <Button
        android:id="@+id/button_search"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/buttons_margin"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:textAllCaps="false"
        android:text="@string/search"
        android:textColor="@color/black"
        android:textSize="@dimen/header_text_size"
        app:cornerRadius="@dimen/buttons_corner_radius"
        app:icon="@drawable/ic_search"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/icon_padding"
        app:iconTint="@color/black"
        android:foreground="?attr/selectableItemBackground"/>

    <Button
        android:id="@+id/button_media"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/buttons_margin"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:textAllCaps="false"
        android:text="@string/media"
        android:textColor="@color/black"
        android:textSize="@dimen/header_text_size"
        app:cornerRadius="@dimen/buttons_corner_radius"
        app:icon="@drawable/ic_mediateka"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/icon_padding"
        app:iconTint="@color/black"
        android:foreground="?attr/selectableItemBackground"/>

    <Button
        android:id="@+id/button_settings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/buttons_margin"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:textAllCaps="false"
        android:text="@string/settings"
        android:textColor="@color/black"
        android:textSize="@dimen/header_text_size"
        app:cornerRadius="@dimen/buttons_corner_radius"
        app:icon="@drawable/ic_settings"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/icon_padding"
        app:iconTint="@color/black"
        android:foreground="?attr/selectableItemBackground"/>


</LinearLayout>

