<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="16dp"
    android:paddingEnd="12dp">

    <Toolbar
        android:id="@+id/settings_toolbar"
        style="@style/ToolbarTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentInsetStartWithNavigation="0dp"
        android:navigationIcon="@drawable/ic_arrow_back_small"
        android:title="@string/settings"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/theme_container"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/theme_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/settings_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:foreground="?attr/selectableItemBackground">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/night_theme"
            android:textColor="@color/primary_text_color"
            android:fontFamily="@font/ys_display_regular"
            android:textSize="@dimen/primary_text_size"
            android:paddingVertical="@dimen/settings_text_margin_vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <Switch
            android:id="@+id/theme_switcher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:thumbTint="@color/thumb_tint"
            android:trackTint="@color/track_tint"
            android:thumbTintMode="src_atop"
            android:trackTintMode="src_atop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="UseSwitchCompatOrMaterialXml"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/share_app"
        style="@style/SettingsScreenButton"
        android:drawableEnd="@drawable/ic_share"
        android:text="@string/share"
        app:layout_constraintTop_toBottomOf="@+id/theme_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/contact_support"
        style="@style/SettingsScreenButton"
        android:drawableEnd="@drawable/ic_support"
        android:text="@string/support"
        app:layout_constraintTop_toBottomOf="@+id/share_app"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/terms_of_use"
        style="@style/SettingsScreenButton"
        android:drawableEnd="@drawable/ic_arrow_forward"
        android:text="@string/terms_of_use"
        app:layout_constraintTop_toBottomOf="@+id/contact_support"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
