<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/create_playlist"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_background_color">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_guidline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <Toolbar
        android:id="@+id/create_toolbar"
        style="@style/ToolbarTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentInsetStart="-4dp"
        android:contentInsetStartWithNavigation="-4dp"
        android:navigationIcon="@drawable/ic_arrow_back"
        android:title="@string/new_playlist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/playlist_cover"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/small_margin"
        android:layout_marginTop="26dp"
        android:background="@drawable/dashed_stroke"
        app:shapeAppearanceOverlay="@style/CustomShapeAppearance"
        android:scaleType="center"
        android:src="@drawable/ic_add_cover"
        app:layout_constraintBottom_toBottomOf="@id/horizontal_guidline"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_toolbar" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/playlist_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:paddingHorizontal="16dp"
        app:boxStrokeColor="@color/edit_text_selector"
        app:hintTextColor="@color/hint_selector"
        app:layout_constraintTop_toBottomOf="@+id/horizontal_guidline">

        <EditText
            android:id="@+id/playlist_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:cursorVisible="true"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_regular"
            android:hint="@string/playlist_name"
            android:inputType="text"
            android:paddingHorizontal="@dimen/primary_margin"
            android:paddingVertical="18dp"
            android:textCursorDrawable="@drawable/ic_cursor_playlist"
            android:textSize="@dimen/primary_text_size" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/primary_margin"
        android:paddingHorizontal="16dp"
        app:boxStrokeColor="@color/edit_text_selector"
        app:hintTextColor="@color/hint_selector"
        app:layout_constraintTop_toBottomOf="@+id/playlist_name_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/playlist_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:cursorVisible="true"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_regular"
            android:hint="@string/playlist_description"
            android:inputType="text"
            android:maxLines="3"
            android:paddingHorizontal="@dimen/primary_margin"
            android:paddingVertical="18dp"
            android:textCursorDrawable="@drawable/ic_cursor_playlist"
            android:textSize="@dimen/primary_text_size" />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/button_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="@dimen/margin_vertical"
        android:background="@drawable/rounded_rectangle_button"
        android:clickable="true"
        android:fontFamily="@font/ys_display_medium"
        android:gravity="center"
        android:inputType="text"
        android:paddingVertical="12dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/create"
        android:textColor="@color/color_white"
        android:textFontWeight="500"
        android:textSize="@dimen/primary_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />


</androidx.constraintlayout.widget.ConstraintLayout>