<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_background_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/margin_horizontal"
        android:orientation="vertical">

        <Toolbar
            android:id="@+id/search_toolbar"
            style="@style/ToolbarTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentInsetStart="0dp"
            android:clickable="true"
            android:title="@string/search" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/extra_small_padding"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_background"
            android:paddingVertical="10dp">


            <EditText
                android:id="@+id/search_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:drawableStart="@drawable/ic_search_small"
                android:drawablePadding="@dimen/icon_padding"
                android:fontFamily="@font/ys_display_regular"
                android:hint="@string/search"
                android:inputType="text"
                android:paddingStart="@dimen/margin_horizontal"
                android:singleLine="true"
                android:textColor="@color/search_screen_text_color"
                android:textColorHint="@color/search_icon_tint"
                android:textCursorDrawable="@drawable/ic_cursor"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/clear_text_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:paddingEnd="@dimen/margin_horizontal"
                android:src="@drawable/ic_clear"
                android:visibility="invisible" />
        </FrameLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/search_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="24dp">


        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/error_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="210dp"
            android:src="@drawable/error_connection"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/error_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="center"
            android:paddingHorizontal="@dimen/margin_vertical"
            android:text="@string/error_connection"
            android:textColor="@color/search_icon_tint_reverse"
            android:textSize="19sp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/refresh_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_vertical"
            android:background="@drawable/rounded_button"
            android:clickable="true"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="center"
            android:paddingVertical="@dimen/small_padding"
            android:paddingStart="@dimen/buttons_margin"
            android:paddingEnd="@dimen/small_padding"
            android:text="@string/refresh"
            android:textColor="@color/primary_background_color"
            android:textFontWeight="500"
            android:textSize="14sp"
            android:visibility="invisible" />


    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/margin_horizontal"
        android:layout_marginTop="150dp"
        android:elevation="0dp">

        <TextView
            android:id="@+id/search_history_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="center_horizontal"
            android:text="@string/search_history"
            android:textSize="19sp"
            android:visibility="invisible"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/search_history_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:elevation="0dp"
            android:visibility="invisible"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_default="wrap"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_history_label"
            app:layout_constraintBottom_toTopOf="@+id/clear_history_button"
            app:layout_constraintVertical_chainStyle="packed"/>

        <TextView
            android:id="@+id/clear_history_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="@dimen/margin_vertical"
            android:background="@drawable/rounded_button_long"
            android:clickable="true"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="center"
            android:paddingVertical="@dimen/small_padding"
            android:paddingStart="@dimen/buttons_margin"
            android:paddingEnd="@dimen/small_padding"
            android:text="@string/clear_history"
            android:textColor="@color/primary_background_color"
            android:textFontWeight="500"
            android:textSize="14sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_history_list"
            app:layout_constraintVertical_chainStyle="packed" />

        <ProgressBar
            android:id="@+id/progress_bar"

            android:layout_width="44dp"
            android:layout_height="44dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="98dp"
            android:indeterminateTint="@color/progress_bar_tint"
            android:visibility="gone"/>
    </androidx.constraintlayout.widget.ConstraintLayout>



</FrameLayout>